# handy-functions

./: LICENSE  README.md  manifest.in  setup.cfg
docs/: a few functions.txt
src/hfunk/: pickecacher.py
