[metadata]
name = hfunk
version = 0.0.1
license = MIT
description = Handy functions
long_description = file: README.md
author = jim-timex-sinclair
author_email = none

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   os
   pickle

[options.packages.find]
where=src




